Bound Kölner/Haase phonetik variation growth
KoelnerPhonetik.getVariations() doubled its candidate list on
every pattern match with no limit, so a token with many
repeated pattern occurrences (e.g. "AUN") could generate
billions of variations and exhaust heap. Separately,
partition() splits a token into every contiguous run of
punctuation/whitespace-separated segments before generating
variations for each part, so a token with n segments produced
n(n+1)/2 parts; each part's variations were capped but that
count multiplied across parts was not, so a punctuation-heavy
token could still exhaust heap.

Share a single MAX_VARIATIONS budget across the whole token:
getVariations() stops branching once its candidate list reaches
the budget, and partition() stops generating additional parts
once the same budget is reached, passing the remaining budget
into each getVariations() call so growth stays bounded however
many parts a token decomposes into. No real name plausibly
needs more than a couple of pattern matches or segments.

Reproduced by running the encoder standalone: a token of
repeated "AUN" (koelnerphonetik) / "SCH" (haasephonetik) hit
OOM on a 2GB heap at just 72 characters, and a token of n
punctuation-separated "AUN-" segments produced 1.27M variations
at n=400. Both now cap at 16, and normal encode() output is unchanged.