@@ -37,6 +37,15 @@ public class KoelnerPhonetik implements StringEncoder {
 
     private static final String[] POSTEL_VARIATIONS_PATTERNS = { "AUN", "OWN", "RB", "RW", "WSK", "RSK" };
     private static final String[] POSTEL_VARIATIONS_REPLACEMENTS = { "OWN", "AUN", "RW", "RB", "RSK", "WSK" };
+
+    // Total variation budget for a single encode() call, shared across every part partition() produces:
+    // getVariations() never returns more than the budget it's given, and partition() stops generating
+    // additional parts once this many have been produced, since a token with n punctuation/whitespace-
+    // separated segments would otherwise yield n(n+1)/2 parts. No real name plausibly needs more than a
+    // couple of pattern matches or segments; this bound exists to stop a crafted token (many repeated
+    // pattern occurrences, e.g. "AUN", or many separator-delimited segments) from exhausting heap.
+    private static final int MAX_VARIATIONS = 16;
+
     private Pattern[] variationsPatterns;
     private boolean primary = false;
     private final Set<Character> csz = new HashSet<>(Arrays.asList('C', 'S', 'Z'));
@@ -124,34 +133,39 @@ public class KoelnerPhonetik implements StringEncoder {
     }
 
     private List<String> partition(String str) {
-        String primaryForm = str;
         List<String> parts = new ArrayList<>();
-        parts.add(primaryForm.replaceAll("[^\\p{L}\\p{N}]", ""));
+        parts.add(str.replaceAll("[^\\p{L}\\p{N}]", ""));
         if (primary == false) {
             List<String> tmpParts = new ArrayList<>(Arrays.asList(str.split("[\\p{Z}\\p{C}\\p{P}]")));
             int numberOfParts = tmpParts.size();
-            while (tmpParts.size() > 0) {
+
+            // A token with n punctuation/whitespace-separated segments yields every contiguous run of
+            // segments as its own part, i.e. n(n+1)/2 parts. Stop generating parts once the shared
+            // MAX_VARIATIONS budget below is reached so that count can't grow unbounded either.
+            while (!tmpParts.isEmpty() && parts.size() < MAX_VARIATIONS) {
                 StringBuilder part = new StringBuilder();
-                for (int i = 0; i < tmpParts.size(); i++) {
+                for (int i = 0; i < tmpParts.size() && parts.size() < MAX_VARIATIONS; i++) {
                     part.append(tmpParts.get(i));
                     if ((i + 1 == numberOfParts) == false) {
                         parts.add(part.toString());
                     }
                 }
-                tmpParts.remove(0);
+                tmpParts.removeFirst();
             }
         }
         List<String> variations = new ArrayList<>();
-        for (int i = 0; i < parts.size(); i++) {
-            List<String> variation = getVariations(parts.get(i));
-            if (variation != null) {
-                variations.addAll(variation);
-            }
+        // Share a single budget across all parts so the total variations for the whole token stay bounded,
+        // rather than allowing each part to independently produce up to MAX_VARIATIONS.
+        int remainingBudget = MAX_VARIATIONS;
+        for (int i = 0; i < parts.size() && remainingBudget > 0; i++) {
+            List<String> variation = getVariations(parts.get(i), remainingBudget);
+            variations.addAll(variation);
+            remainingBudget -= variation.size();
         }
         return variations;
     }
 
-    private List<String> getVariations(String str) {
+    private List<String> getVariations(String str, int maxVariations) {
         int position = 0;
         List<String> variations = new ArrayList<>();
         variations.add("");
@@ -167,11 +181,19 @@ public class KoelnerPhonetik implements StringEncoder {
             }
             if (substPos >= position) {
                 i--;
-                List<String> varNew = new ArrayList<>();
                 String prevPart = str.substring(position, substPos);
-                for (int ii = 0; ii < variations.size(); ii++) {
-                    String tmp = variations.get(ii);
-                    varNew.add(tmp.concat(prevPart + getReplacements()[i]));
+
+                // Fix the pre-branch size so the loop below only rewrites the existing entries, not the
+                // replacement variants just appended to varNew. Add only as many replacement branches as fit
+                // under maxVariations, rather than always doubling, so a budget that isn't a power of two
+                // (e.g. left over from an earlier part) can't be overshot.
+                int sizeBeforeBranching = variations.size();
+                int branchesToAdd = Math.max(0, Math.min(sizeBeforeBranching, maxVariations - sizeBeforeBranching));
+                List<String> varNew = new ArrayList<>(branchesToAdd);
+                for (int ii = 0; ii < sizeBeforeBranching; ii++) {
+                    if (ii < branchesToAdd) {
+                        varNew.add(variations.get(ii).concat(prevPart + getReplacements()[i]));
+                    }
                     variations.set(ii, variations.get(ii) + prevPart + getPatterns()[i]);
                 }
                 variations.addAll(varNew);
